--- a/HealthApp/res/layout/activity_main.xml
+++ b/HealthApp/res/layout/activity_main.xml
@@ -14,9 +14,26 @@
         android:text="@string/track_home" />
 
     <Button
-        android:id="@+id/button1"
-        android:layout_width="wrap_content"
+        android:id="@+id/twitter"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginBottom="50dp"
         android:text="@string/login_twitter" />
+
+    <Button
+        android:id="@+id/facebook"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="@string/login_facebook" />
+
+    <Button
+        android:id="@+id/account"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="50dp"
+        android:text="@string/create_account" />
 
 </FrameLayout>
