--- a/HealthApp/res/layout/app_tabs.xml
+++ b/HealthApp/res/layout/app_tabs.xml
@@ -10,7 +10,7 @@
 
         <TabWidget
             android:id="@android:id/tabs"
-            android:layout_alignParentBottom"="true"
+            android:layout_alignParentBottom="true"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content" >
 
