--- a/HealthApp/res/layout/activity_main.xml
+++ b/HealthApp/res/layout/activity_main.xml
@@ -21,12 +21,21 @@
         android:layout_marginBottom="50dp"
         android:text="@string/login_twitter" />
 
+    <!--  
     <Button
         android:id="@+id/facebook"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:text="@string/login_facebook" />
+    -->
+    <com.facebook.widget.LoginButton
+            android:id="@+id/facebook"
+            android:layout_width="200dp"
+        	android:layout_height="wrap_content"
+        	android:layout_gravity="center"
+            android:layout_marginTop="30dp"
+            android:layout_marginBottom="30dp" />
 
     <Button
         android:id="@+id/account"
