--- a/HealthApp/res/layout/login_form.xml
+++ b/HealthApp/res/layout/login_form.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent" >
 
     <TextView
-        android:id="@+id/textView1"
+        android:id="@+id/profile_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
@@ -19,8 +19,8 @@
         android:id="@+id/name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView1"
-        android:layout_below="@+id/textView1"
+        android:layout_alignLeft="@+id/profile_name"
+        android:layout_below="@+id/profile_name"
         android:ems="10"
         android:inputType="textPersonName" >
 
@@ -31,22 +31,22 @@
         android:id="@+id/password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView2"
+        android:layout_alignLeft="@+id/profile_extra"
         android:layout_centerVertical="true"
         android:ems="10"
         android:inputType="textPassword" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/profile_extra"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/password"
-        android:layout_alignRight="@+id/textView3"
+        android:layout_alignRight="@+id/profile_current_health"
         android:text="@string/password"
         android:textAppearance="?android:attr/textAppearanceSmall" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/profile_current_health"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/name"
@@ -59,8 +59,8 @@
         android:id="@+id/username"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView2"
-        android:layout_below="@+id/textView3"
+        android:layout_alignLeft="@+id/profile_extra"
+        android:layout_below="@+id/profile_current_health"
         android:ems="10"
         android:inputType="textPersonName" />
 
