--- a/HealthApp/res/layout/map_layout.xml
+++ b/HealthApp/res/layout/map_layout.xml
@@ -4,5 +4,11 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
     
+    
+    <fragment
+        android:id="@+id/map"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent" />
 
 </LinearLayout>
